# keyboard-research-kit

./: .gitignore  Cargo.toml  LICENSE  README.md
nix/modules/: devshell.nix  rust.nix
src/: keylogger.rs  main.rs
src/keylogger/: key_events.rs  mod.rs
